--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -5,6 +5,15 @@
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d">
+    <Style x:Key="TopBarPlaceholderBorderStyle"
+           TargetType="Border">
+        <Setter Property="HorizontalAlignment"
+                Value="Stretch" />
+        <Setter Property="VerticalAlignment"
+                Value="Top" />
+        <Setter Property="Background"
+                Value="{ThemeResource CommandBarBackground}" />
+    </Style>
 
     <Style x:Key="ListViewItemStyle"
            TargetType="ListViewItem">
