--- a/ExViewer/Converters/Converters.xaml
+++ b/ExViewer/Converters/Converters.xaml
@@ -3,6 +3,7 @@
                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                         xmlns:local="using:ExViewer.Views">
     <SoftwareBitmapToImageSourceConverter x:Key="SoftwareBitmapToImageSourceConverter" />
+    <ThicknessConverter x:Key="ThicknessConverter" />
     <FormatStringConverter x:Key="StringConverter" />
     <InvertConverter x:Key="TrueToVisibleConverter">
         <ObjectToBooleanConverter>
