--- a/ExViewer/Views/FavoritesPage.xaml
+++ b/ExViewer/Views/FavoritesPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ExViewer.Views.FavoritesPage"
+﻿<controls:MyPage x:Class="ExViewer.Views.FavoritesPage"
       x:Name="root"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,20 +15,21 @@
       xmlns:controls="using:ExViewer.Controls"
       xmlns:client="using:ExClient"
       NavigationCacheMode="Enabled">
-    <Page.Transitions>
+    <controls:MyPage.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
                 <DrillInNavigationTransitionInfo />
             </NavigationThemeTransition>
         </TransitionCollection>
-    </Page.Transitions>
+    </controls:MyPage.Transitions>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+        <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
+              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition x:Name="cdSplitViewPlaceholder"
                                   Width="0" />
@@ -71,6 +72,8 @@
                                   Grid.Row="1"
                                   SelectionMode="None"
                                   RefreshRequested="lv_RefreshRequested"
+                                  Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                                  Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
                                   ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
                                   ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                                   Style="{StaticResource GalleryListViewStyle}"
@@ -104,4 +107,4 @@
             </ListView.Footer>
         </tk:PullToRefreshListView>
     </Grid>
-</Page>
+</controls:MyPage>
