--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ExViewer.Views.GalleryPage"
+﻿<controls:MyPage x:Class="ExViewer.Views.GalleryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:VM="using:ExViewer.ViewModels"
@@ -15,14 +15,14 @@
       SizeChanged="page_SizeChanged"
       xmlns:con="using:ExViewer.Converters"
       mc:Ignorable="d">
-    <Page.Transitions>
+    <controls:MyPage.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
                 <ContinuumNavigationTransitionInfo />
             </NavigationThemeTransition>
         </TransitionCollection>
-    </Page.Transitions>
-    <Page.Resources>
+    </controls:MyPage.Transitions>
+    <controls:MyPage.Resources>
         <con:ObjectToBooleanConverter x:Key="ConAddComment"
                                       IfNeither="False"
                                       InnerConverter="{StaticResource TrueToVisibleConverter}">
@@ -221,7 +221,7 @@
             <Setter Property="VerticalAlignment"
                     Value="Top" />
         </Style>
-    </Page.Resources>
+    </controls:MyPage.Resources>
     <Grid x:Name="gd_Root">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -248,6 +248,57 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
+        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"/>
+        <CommandBar x:Name="cb_top"
+                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                    Opening="cb_top_Opening"
+                    Closed="cb_top_Closed"
+                    HorizontalContentAlignment="Stretch"
+                    IsDynamicOverflowEnabled="False">
+            <CommandBar.Content>
+                <Grid Padding="0,14">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition x:Name="cdSplitViewPlaceholder"
+                                          Width="0" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="tbGalleryName"
+                               Grid.Column="1"
+                               Grid.ColumnSpan="999"
+                               Style="{StaticResource GalleryTitleTextBlockStyle}"
+                               Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}">
+                        <ToolTipService.ToolTip>
+                            <TextBlock Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
+                                       TextWrapping="WrapWholeWords" />
+                        </ToolTipService.ToolTip>
+                    </TextBlock>
+                </Grid>
+            </CommandBar.Content>
+            <CommandBar.PrimaryCommands>
+                <AppBarButton x:Name="abbFavorites"
+                              Icon="Favorite"
+                              Foreground="{x:Bind VM.Gallery.FavoriteCategory, Converter={StaticResource FavoriteCategoryToBrushConverter}, Mode=OneWay}"
+                              Label="{x:Bind VM.Gallery.FavoriteCategory, Converter={StaticResource FavoriteCategoryToNameConverter}, Mode=OneWay}"
+                              Click="abbFavorites_Click" />
+                <AppBarButton x:Name="abbComment"
+                              x:Uid="Views/GalleryPage/AppBarButtonAddComment"
+                              Icon="Add"
+                              Label="Post new comment"
+                              Visibility="{x:Bind pv.SelectedIndex, Mode=OneWay, Converter={StaticResource ConAddComment}}"
+                              Click="abbComment_Click" />
+            </CommandBar.PrimaryCommands>
+            <CommandBar.SecondaryCommands>
+                <AppBarButton x:Name="abb_share"
+                              x:Uid="Views/GalleryPage/ShareAppBarButton"
+                              Command="{x:Bind VM.Share, Mode=OneWay}"
+                              Label="Share" />
+                <AppBarButton x:Name="abb_save"
+                              x:Uid="Views/GalleryPage/SaveAppBarButton"
+                              Command="{x:Bind VM.Save, Mode=OneWay}"
+                              Label="Save this gallery" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
         <ScrollViewer x:Name="sv_Content"
                       Grid.Row="1"
                       VerticalScrollBarVisibility="Hidden"
@@ -256,6 +307,7 @@
                       VerticalSnapPointsType="Mandatory">
             <StackPanel>
                 <Grid x:Name="gd_Info"
+                      Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                       MinHeight="100"
                       MaxHeight="300"
                       SizeChanged="gd_Info_SizeChanged">
@@ -370,7 +422,8 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+                    <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
+                            Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}">
                         <Button x:Name="btn_Scroll"
                                 Width="48"
                                 Height="24"
@@ -394,15 +447,10 @@
                            Grid.Row="1"
                            HorizontalContentAlignment="Stretch"
                            VerticalContentAlignment="Stretch"
+                           BorderThickness="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                            BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
                            Loaded="pv_Loaded"
                            SelectionChanged="pv_SelectionChanged">
-                        <Pivot.ItemContainerStyle>
-                            <Style TargetType="PivotItem">
-                                <Setter Property="Margin"
-                                        Value="0" />
-                            </Style>
-                        </Pivot.ItemContainerStyle>
                         <PivotItem>
                             <PivotItem.Header>
                                 <Grid Style="{StaticResource PivotHeaderGridStyle}">
@@ -427,6 +475,7 @@
                             </PivotItem.Header>
                             <GridView xmlns:animation="using:Microsoft.Toolkit.Uwp.UI.Animations"
                                       x:Name="gv"
+                                      Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                                       Padding="8,4,8,12"
                                       VerticalAlignment="Top"
                                       animation:ReorderGridAnimation.Duration="100"
@@ -490,6 +539,8 @@
                                 </Grid>
                             </PivotItem.Header>
                             <ListView x:Name="lv_Comments"
+                                      Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                                      Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
                                       ItemsSource="{x:Bind VM.Gallery.Comments, Mode=OneWay}"
                                       Loaded="pv_Content_Loaded"
                                       SelectionMode="None">
@@ -548,6 +599,8 @@
                                 </Grid>
                             </PivotItem.Header>
                             <ListView x:Name="lv_Torrents"
+                                      Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                                      Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
                                       ItemTemplate="{StaticResource TorrentTemplate}"
                                       ItemsSource="{x:Bind VM.Torrents, Mode=OneWay}"
                                       ItemContainerStyle="{StaticResource UnfocusableListViewItemStyle}"
@@ -575,56 +628,9 @@
                 </Grid>
             </StackPanel>
         </ScrollViewer>
-        <CommandBar x:Name="cb_top"
-                    Opening="cb_top_Opening"
-                    Closed="cb_top_Closed"
-                    HorizontalContentAlignment="Stretch"
-                    IsDynamicOverflowEnabled="False">
-            <CommandBar.Content>
-                <Grid Padding="0,14">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition x:Name="cdSplitViewPlaceholder"
-                                          Width="0" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock x:Name="tbGalleryName"
-                               Grid.Column="1"
-                               Grid.ColumnSpan="999"
-                               Style="{StaticResource GalleryTitleTextBlockStyle}"
-                               Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}">
-                        <ToolTipService.ToolTip>
-                            <TextBlock Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
-                                       TextWrapping="WrapWholeWords" />
-                        </ToolTipService.ToolTip>
-                    </TextBlock>
-                </Grid>
-            </CommandBar.Content>
-            <CommandBar.PrimaryCommands>
-                <AppBarButton x:Name="abbFavorites"
-                              Icon="Favorite"
-                              Foreground="{x:Bind VM.Gallery.FavoriteCategory, Converter={StaticResource FavoriteCategoryToBrushConverter}, Mode=OneWay}"
-                              Label="{x:Bind VM.Gallery.FavoriteCategory, Converter={StaticResource FavoriteCategoryToNameConverter}, Mode=OneWay}"
-                              Click="abbFavorites_Click" />
-                <AppBarButton x:Name="abbComment"
-                              x:Uid="Views/GalleryPage/AppBarButtonAddComment"
-                              Icon="Add"
-                              Label="Post new comment"
-                              Visibility="{x:Bind pv.SelectedIndex, Mode=OneWay, Converter={StaticResource ConAddComment}}"
-                              Click="abbComment_Click" />
-            </CommandBar.PrimaryCommands>
-            <CommandBar.SecondaryCommands>
-                <AppBarButton x:Name="abb_share"
-                              x:Uid="Views/GalleryPage/ShareAppBarButton"
-                              Command="{x:Bind VM.Share, Mode=OneWay}"
-                              Label="Share" />
-                <AppBarButton x:Name="abb_save"
-                              x:Uid="Views/GalleryPage/SaveAppBarButton"
-                              Command="{x:Bind VM.Save, Mode=OneWay}"
-                              Label="Save this gallery" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
         <ProgressBar x:Name="pb_save"
                      Grid.Row="1"
+                     Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                      VerticalAlignment="Top"
                      Foreground="{x:Bind VM.SaveStatus, Converter={StaticResource OperationStateToBrushConverter}, Mode=OneWay}"
                      IsHitTestVisible="False"
@@ -634,4 +640,4 @@
                      Visibility="{x:Bind VM.SaveStatus, Converter={StaticResource OperationStateToVisibilityConverter}, Mode=OneWay}"
                      Value="{x:Bind VM.SaveProgress, Mode=OneWay}" />
     </Grid>
-</Page>
+</controls:MyPage>
