--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="ExViewer.Views.ImagePage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:controls="using:ExViewer.Controls"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:ExViewer.Views"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      x:Name="page"
-      Loading="page_Loading"
-      Unloaded="page_Unloaded"
-      NavigationCacheMode="Enabled"
-      mc:Ignorable="d">
+﻿<controls:MyPage x:Class="ExViewer.Views.ImagePage"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:controls="using:ExViewer.Controls"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:local="using:ExViewer.Views"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 x:Name="page"
+                 Loading="page_Loading"
+                 Unloaded="page_Unloaded"
+                 NavigationCacheMode="Enabled"
+                 mc:Ignorable="d">
     <Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -25,8 +25,10 @@
                   Tapped="fvi_Tapped">
                 <controls:ImagePresenter x:Name="ip"
                                          Grid.RowSpan="2"
-                                         Image="{x:Bind Image, Mode=OneWay}" />
+                                         Image="{x:Bind Image, Mode=OneWay}"
+                                         Padding="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay}" />
                 <ProgressBar Margin="0,48,0,0"
+                             Padding="{Binding VisibleBoundsThickness, ElementName=page, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                              VerticalAlignment="Top"
                              Foreground="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue={ThemeResource SystemControlForegroundAccentBrush}}"
                              IsIndeterminate="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}, FallbackValue=True}"
@@ -82,9 +84,61 @@
                               EasingMode="EaseOut" />
                 </DoubleAnimation.EasingFunction>
             </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdTop"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="0">
+                <DoubleAnimation.EasingFunction>
+                    <BackEase Amplitude="0.25"
+                              EasingMode="EaseOut" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdLeft"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="0">
+                <DoubleAnimation.EasingFunction>
+                    <BackEase Amplitude="0.25"
+                              EasingMode="EaseOut" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdRight"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="0">
+                <DoubleAnimation.EasingFunction>
+                    <BackEase Amplitude="0.25"
+                              EasingMode="EaseOut" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
         </Storyboard>
-        <Storyboard x:Name="cb_top_Hide" Completed="cb_top_Hide_Completed">
+        <Storyboard x:Name="cb_top_Hide"
+                    Completed="cb_top_Hide_Completed">
             <DoubleAnimation Storyboard.TargetName="cb_top"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="-48">
+                <DoubleAnimation.EasingFunction>
+                    <CubicEase EasingMode="EaseIn" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdTop"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="-48">
+                <DoubleAnimation.EasingFunction>
+                    <CubicEase EasingMode="EaseIn" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdLeft"
+                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
+                             Duration="0:0:0.2"
+                             To="-48">
+                <DoubleAnimation.EasingFunction>
+                    <CubicEase EasingMode="EaseIn" />
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation Storyboard.TargetName="bdRight"
                              Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
                              Duration="0:0:0.2"
                              To="-48">
@@ -123,8 +177,44 @@
                 </Style>
             </FlipView.ItemContainerStyle>
         </FlipView>
+        <Border x:Name="bdTop"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
+                Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
+                Background="{x:Bind cb_top.Background, Mode=OneWay}"
+                RelativePanel.AlignTopWithPanel="True"
+                RelativePanel.AlignLeftWithPanel="True"
+                RelativePanel.AlignRightWithPanel="True">
+            <Border.RenderTransform>
+                <TranslateTransform  />
+            </Border.RenderTransform>
+        </Border>
+        <Border x:Name="bdLeft"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0,x0,x0'}"
+                Height="48"
+                Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x1,x0,x0'}"
+                Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
+                Background="{x:Bind cb_top.Background, Mode=OneWay}"
+                RelativePanel.AlignTopWithPanel="True"
+                RelativePanel.AlignLeftWithPanel="True">
+            <Border.RenderTransform>
+                <TranslateTransform />
+            </Border.RenderTransform>
+        </Border>
+        <Border x:Name="bdRight"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x1,x0'}"
+                Height="48"
+                Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x1,x0,x0'}"
+                Visibility="{x:Bind cb_top.Visibility, Mode=OneWay}"
+                Background="{x:Bind cb_top.Background, Mode=OneWay}"
+                RelativePanel.AlignTopWithPanel="True"
+                RelativePanel.AlignRightWithPanel="True">
+            <Border.RenderTransform>
+                <TranslateTransform />
+            </Border.RenderTransform>
+        </Border>
         <CommandBar x:Name="cb_top"
                     KeyDown="cb_top_KeyDown"
+                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
                     HorizontalContentAlignment="Stretch"
                     Closing="cb_top_Closing"
                     Closed="cb_top_Closed"
@@ -244,4 +334,4 @@
             </CommandBar.SecondaryCommands>
         </CommandBar>
     </RelativePanel>
-</Page>
+</controls:MyPage>
