--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ExViewer.Views.SearchPage"
+﻿<controls:MyPage x:Class="ExViewer.Views.SearchPage"
       x:Name="root"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -19,7 +19,12 @@
     </Page.Transitions>
 
     <RelativePanel>
+        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+                RelativePanel.AlignLeftWithPanel="True"
+                RelativePanel.AlignRightWithPanel="True" />
         <AppBar x:Name="ab"
+                Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
                 ClosedDisplayMode="Compact"
                 Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
                 RelativePanel.AlignLeftWithPanel="True"
@@ -122,6 +127,8 @@
                                   RelativePanel.AlignRightWithPanel="True"
                                   SelectionMode="None"
                                   RefreshRequested="lv_RefreshRequested"
+                                  Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                                  Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
                                   ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
                                   ContinuumNavigationTransitionInfo.ExitElementContainer="True"
                                   Style="{StaticResource GalleryListViewStyle}"
@@ -155,4 +162,4 @@
             </ListView.Footer>
         </tk:PullToRefreshListView>
     </RelativePanel>
-</Page>
+</controls:MyPage>
