--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -24,38 +24,42 @@
             </DoubleAnimation>
         </Storyboard>
     </UserControl.Resources>
-    <Grid Background="{StaticResource SplashBrush}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Image x:Name="img_splash"
-               Grid.RowSpan="2"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               RenderTransformOrigin="0.5,0.5"
-               Source="ms-appx:///Assets/SplashScreen.png">
-            <Image.RenderTransform>
-                <CompositeTransform />
-            </Image.RenderTransform>
-        </Image>
-        <Image x:Name="img_pic"
-               Grid.RowSpan="2"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               ImageFailed="img_pic_ImageFailed"
-               ImageOpened="img_pic_ImageOpened"
-               Opacity="0">
-            <Image.Source>
-                <BitmapImage />
-            </Image.Source>
-        </Image>
-        <ProgressRing x:Name="pr"
-                      Grid.Row="1"
-                      Width="40"
-                      Height="40"
-                      x:DeferLoadStrategy="Lazy"
-                      IsActive="True"
-                      VerticalAlignment="Top" />
+    <Grid>
+        <ContentPresenter x:Name="cpHided"
+                          x:DeferLoadStrategy="Lazy" />
+        <Grid Background="{StaticResource SplashBrush}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Image x:Name="img_splash"
+                   Grid.RowSpan="2"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   RenderTransformOrigin="0.5,0.5"
+                   Source="ms-appx:///Assets/SplashScreen.png">
+                <Image.RenderTransform>
+                    <CompositeTransform />
+                </Image.RenderTransform>
+            </Image>
+            <Image x:Name="img_pic"
+                   Grid.RowSpan="2"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   ImageFailed="img_pic_ImageFailed"
+                   ImageOpened="img_pic_ImageOpened"
+                   Opacity="0">
+                <Image.Source>
+                    <BitmapImage />
+                </Image.Source>
+            </Image>
+            <ProgressRing x:Name="pr"
+                          Grid.Row="1"
+                          Width="40"
+                          Height="40"
+                          x:DeferLoadStrategy="Lazy"
+                          IsActive="True"
+                          VerticalAlignment="Top" />
+        </Grid>
     </Grid>
 </UserControl>
