new auto complete source
Former-commit-id: 3e4a6dc73dc87de869a1201753fb4826553f2b51 [formerly 7b752c3044c3c08ea748d18bcc9db69dc39fac14]
Former-commit-id: c5bb057feb7c0567a40a1b4a0e6393ed24c3cc5a

--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -38,7 +38,7 @@
             <Image x:Name="img_Thumb"
                    Source="{x:Bind Image.Thumb, Mode=OneWay, FallbackValue={ThemeResource LoadingImageSource}}" />
             <Image x:Name="img_Content"
-                   Source="{x:Bind Image.Image, Mode=OneWay}"
+                   local:ImagePresenter.ImageFile="{x:Bind Image.ImageFile, Mode=OneWay}"
                    Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
         </Grid>
     </ScrollViewer>
